--- a/projects/ngx-grid-core/src/lib/ui/data-grid/data-grid.component.scss
+++ b/projects/ngx-grid-core/src/lib/ui/data-grid/data-grid.component.scss
@@ -1,3 +1,51 @@
+::ng-deep { 
+  .cdk-drag-preview {
+    box-sizing: border-box;
+    border-radius: 4px;
+    box-shadow: 0px 1px 4px 0px rgba(0,0,0,0.25);
+  }
+
+  .cdk-drag-placeholder > *:not(data-grid-seperator) {
+    opacity: 0.2 !important;
+  }
+
+  .cdk-drag-animating,
+  [cdkDropList].cdk-drop-list-dragging > *:not(.cdk-drag-placeholder) {
+    transition: transform 100ms cubic-bezier(0, 0, 0.2, 1);
+  }
+
+  button, input {
+    font: 400 14px / 20px Roboto, "Helvetica Neue", sans-serif;
+    outline: none;
+  }
+
+  [hidden] {
+    display: none !important;
+  }
+
+  .mat-menu-item {
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    cursor: pointer;
+    outline: none;
+    border: none;
+    -webkit-tap-highlight-color: transparent;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: block;
+    line-height: 48px;
+    height: 48px;
+    padding: 0 16px;
+    text-align: left;
+    text-decoration: none;
+    max-width: 100%;
+    width: 100%;
+    position: relative;
+  }
+}
+
 :host {  
   ::ng-deep {
     @import "../cell/cell-types/styles/cell-type-styles";
