--- a/projects/ngx-grid-toolbar/src/lib/ui/paste-denied-dialog/paste-denied-dialog.component.html
+++ b/projects/ngx-grid-toolbar/src/lib/ui/paste-denied-dialog/paste-denied-dialog.component.html
@@ -1,8 +1,8 @@
-<h2 mat-dialog-title>Access to the Clipboard was Denied</h2>
+<h2 mat-dialog-title><lib-localized-text>locAccessToTheClipboardWasDenied</lib-localized-text></h2>
 <div mat-dialog-content>
-  <p>Please allow clipboard read access to enable the paste operation.</p>
+  <p><lib-localized-text>locPleaseAllowClipboardReadAccessToEnableThePasteOperation</lib-localized-text>.</p>
   <img src="/assets/enable-clipboard-chrome.png" alt="">
 </div>
 <div mat-dialog-actions align="end">
-  <button mat-button mat-dialog-close>Close</button>
+  <button mat-button mat-dialog-close><lib-localized-text>locClose</lib-localized-text></button>
 </div>
