--- a/projects/ngx-grid-toolbar/src/lib/ui/static-toolbar/items/delete-records/delete-records.component.html
+++ b/projects/ngx-grid-toolbar/src/lib/ui/static-toolbar/items/delete-records/delete-records.component.html
@@ -1,4 +1,4 @@
 <button matRipple (click)="action()">
   <mat-icon svgIcon="Delete"></mat-icon>
-  <span class="label">Delete {{ toolbarService.recordStr }}</span>
+  <span class="label"><lib-localized-text>locDeleteRecord(s)</lib-localized-text></span>
 </button>
