--- a/projects/ngx-grid-toolbar/src/lib/ui/static-toolbar/items/copy-selection/copy-selection.component.html
+++ b/projects/ngx-grid-toolbar/src/lib/ui/static-toolbar/items/copy-selection/copy-selection.component.html
@@ -1,4 +1,4 @@
 <button matRipple (click)="action()">
   <mat-icon svgIcon="Copy"></mat-icon>
-  <span class="label">Copy {{ toolbarService.cellStr }}</span>
+  <span class="label"><lib-localized-text>locCopySelectedCell(s)</lib-localized-text></span>
 </button>
