--- a/projects/ngx-grid-toolbar/src/lib/ui/static-toolbar/items/revert-records/revert-records.component.html
+++ b/projects/ngx-grid-toolbar/src/lib/ui/static-toolbar/items/revert-records/revert-records.component.html
@@ -2,7 +2,7 @@
 <div class="button-group">
   <button class="main text" matRipple (click)="revertAll(); toolbarService.setItems()">
     <mat-icon svgIcon="Undo"></mat-icon>
-    <span class="label">Revert {{ toolbarService.dirtyRecordsStr }}</span>
+    <span class="label"><lib-localized-text>locRevertAllRecords</lib-localized-text></span>
   </button>
   <button class="main arrow icon-button" matRipple [matMenuTriggerFor]="dropdownMenu">
     <span class="material-icons-outlined icon">keyboard_arrow_down</span>
@@ -11,7 +11,7 @@
 <mat-menu #dropdownMenu="matMenu">
   <button mat-menu-item [disabled]="!selectionDirtyRecordsCount" (click)="revertSelected(); toolbarService.setItems()">
     <mat-icon svgIcon="Undo" style="transform: scale(0.7);"></mat-icon>
-    Revert selected record{{ selectionDirtyRecordsCount === 1 ? '' :'s' }}
-    <span *ngIf="selectionDirtyRecordsCount > 0">({{ selectionDirtyRecordsCount + ' of ' + toolbarService.dirtyRecordsCount }})</span>
+    <lib-localized-text>locRevertSelectedRecord(s)</lib-localized-text>
+    <span *ngIf="selectionDirtyRecordsCount > 0"> ({{ selectionDirtyRecordsCount + ' of ' + toolbarService.dirtyRecordsCount }})</span>
   </button>
 </mat-menu>
