--- a/projects/ngx-grid-core/src/lib/ui/grid-overlays/multi-select-static-list-overlay/multi-select-static-list-overlay.component.html
+++ b/projects/ngx-grid-core/src/lib/ui/grid-overlays/multi-select-static-list-overlay/multi-select-static-list-overlay.component.html
@@ -2,17 +2,10 @@
   <div class="actions" [style.marginBottom]="options?.length ? '14px' : ''" *ngIf="cell.isEditable">
     <button mat-button color="primary" (click)="select()" class="link" #AddBtn>
       <span class="material-icons-outlined">add</span>
-      <span class="label">Select an option</span>
+      <span class="label">{{ localize('locSelectAnOption') }}</span>
     </button>
   </div>
-  <div class="chip" *ngFor="let option of options;" [dataGridResponsiveBackgroundColor]="{color: option.color ?? defaultColor, themeMode: themeMode}">
-    <div class="label">{{ option.label ?? option.value }}</div>
-    <button class="close action" matRipple (click)="remove(option)" *ngIf="cell.isEditable">
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-        <path d="M0 0h24v24H0V0z" fill="none" />
-        <path
-          d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z" />
-      </svg>
-    </button>
-  </div>
+  <data-grid-chip [color]="option.color ?? defaultColor" [editable]="cell.isEditable" [theme]="themeMode"
+    *ngFor="let option of options" [label]="option.label ?? option.value.toString()" (removeAction)="remove(option)"
+    chipStyle="rounded"></data-grid-chip>
 </app-floating-window>
