Correct file icon color for dark mode

--- a/projects/ngx-grid-core/src/lib/ui/cell/cell-types/styles/cell-type-styles.scss
+++ b/projects/ngx-grid-core/src/lib/ui/cell/cell-types/styles/cell-type-styles.scss
@@ -173,6 +173,7 @@ input[type="number"] {
       height: 14px;
       margin-right: 2px;
       opacity: 0.7;
+      fill: currentColor;
     }
     .progressBar {
       --size: 11px;
