Add removeUpload method to upload service

--- a/projects/ngx-grid-core/src/lib/ui/cell-action-button/cell-action-button.component.scss
+++ b/projects/ngx-grid-core/src/lib/ui/cell-action-button/cell-action-button.component.scss
@@ -52,6 +52,7 @@ button.action {
   &.more {
     width: 18px;
     height: 18px;
+    min-width: 18px;
     ::ng-deep {
       svg {
         width: 10px;
