--- a/projects/ngx-grid-core/src/lib/ui/grid-overlays/file-grid-cell-preview-overlay/file-grid-cell-preview-overlay.component.scss
+++ b/projects/ngx-grid-core/src/lib/ui/grid-overlays/file-grid-cell-preview-overlay/file-grid-cell-preview-overlay.component.scss
@@ -6,6 +6,10 @@
 .chips {
   display: flex;
   align-items: center;
+  &.disabled {
+    opacity: 0.3;
+    pointer-events: none;
+  }
 }
 
 data-grid-chip {
@@ -32,4 +36,19 @@ data-grid-chip {
 
 .progressTxt {
   font-size: 9px;
+}
+
+data-grid-expandable-preview-popup {
+  position: relative;
+  display: block;
+}
+
+.file-dropzone {
+  top: 3px;
+  left: 3px;
+  right: 3px;
+  bottom: 3px;
+  &.hover:before {
+    opacity: 0.2;
+  }
 }
