Tweak to file label

--- a/projects/ngx-grid-core/src/lib/ui/grid-overlays/file-grid-cell-selected-list/file-grid-cell-selected-list.component.scss
+++ b/projects/ngx-grid-core/src/lib/ui/grid-overlays/file-grid-cell-selected-list/file-grid-cell-selected-list.component.scss
@@ -22,6 +22,9 @@
     flex-grow: 1;
     user-select: none;
     cursor: default;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
   }
   .remove {
     .material-icons-outlined {
