--- a/projects/ngx-grid-core/src/lib/ui/row/row.component.html
+++ b/projects/ngx-grid-core/src/lib/ui/row/row.component.html
@@ -1,6 +1,6 @@
 <div class="cell row-thumb display">
   <data-grid-row-icon [icon]="icon"></data-grid-row-icon>
-  <data-grid-seperator *ngFor="let s of seperators" [seperator]="s" Axis="x" ></data-grid-seperator>
+  <data-grid-separator *ngFor="let s of separators" [separator]="s" axis="x" ></data-grid-separator>
 </div>
 <data-grid-cell class="cell" #cells class="cell" *ngFor="let c of columns; trackBy:cellColumnKey" [rowComponent]="rowComponent"></data-grid-cell>
 <!-- <data-grid-cell>
