--- a/projects/ngx-grid-core/src/lib/ui/cell/cell-types/styles/cell-type-styles.scss
+++ b/projects/ngx-grid-core/src/lib/ui/cell/cell-types/styles/cell-type-styles.scss
@@ -206,3 +206,47 @@ input[type="number"] {
     }
   }
 }
+
+
+@keyframes dot-keyframes {
+  0% {
+    opacity: .4;
+    transform: scale(1, 1);
+  }
+
+  50% {
+    opacity: 1;
+    transform: scale(1.2, 1.2);
+  }
+
+  100% {
+    opacity: .4;
+    transform: scale(1, 1);
+  }
+}
+
+.loading-dots {
+  text-align: center;
+  height: 13px;
+  align-items: center;
+  display: flex;
+  padding: 0px 2px;
+  div {
+    animation: dot-keyframes 1.5s infinite ease-in-out;
+    background-color: currentColor;
+    border-radius: 4px;
+    display: inline-block;
+    height: 6px;
+    width: 6px;
+    margin-right: 2px;
+    
+    &:nth-child(2) {
+      animation-delay: .5s;
+    }
+    
+    &:nth-child(3) {
+      animation-delay: 1s;
+      margin-right: 0px;
+    }
+  }
+}
