--- a/projects/ngx-grid-core/src/lib/ui/record-selector/record-selector-row/record-selector-row.component.scss
+++ b/projects/ngx-grid-core/src/lib/ui/record-selector/record-selector-row/record-selector-row.component.scss
@@ -8,6 +8,9 @@
   font-size: 14px;
   margin-bottom: 8px;
   margin-top: 2px;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .cells {
