--- a/projects/ngx-grid-core/src/lib/ui/grid-overlays/file-grid-cell-selected-list/file-grid-cell-selected-list.component.scss
+++ b/projects/ngx-grid-core/src/lib/ui/grid-overlays/file-grid-cell-selected-list/file-grid-cell-selected-list.component.scss
@@ -27,7 +27,7 @@
     text-overflow: ellipsis;
   }
   .remove {
-    .material-icons-outlined {
+    .material-symbols-outlined {
       transform: scale(0.9);
     }
   }
