--- a/projects/ngx-grid-core/src/lib/ui/grid-overlays/multi-select-grid-selected-list/multi-select-grid-selected-list.component.html
+++ b/projects/ngx-grid-core/src/lib/ui/grid-overlays/multi-select-grid-selected-list/multi-select-grid-selected-list.component.html
@@ -7,7 +7,7 @@
 
     <div class="actions" [style.marginTop]="hasSelectedRows ? '14px' : ''" *ngIf="editable">
       <button mat-button color="primary" (click)="selected.emit()" class="link">
-        <span class="material-icons-outlined">add</span>
+        <span class="material-symbols-outlined">add</span>
         <span class="label">{{ localize('locLinkToARecordFrom') }} {{ dataSetName }}</span>
       </button>
     </div>
