--- a/projects/ngx-grid-core/src/lib/ui/grid-overlays/multi-select-static-list-overlay/multi-select-static-list-overlay.component.scss
+++ b/projects/ngx-grid-core/src/lib/ui/grid-overlays/multi-select-static-list-overlay/multi-select-static-list-overlay.component.scss
@@ -5,12 +5,12 @@
     height: 30px;
     line-height: 14px;
     background-color: var(--neutral-highlight);
-    .material-icons-outlined {
+    .material-symbols-outlined {
       font-size: 17px;
       margin-left: -4px;
       margin-right: 2px;
     }
-    .material-icons-outlined,
+    .material-symbols-outlined,
     .label {
       vertical-align: middle;
     }
