--- a/projects/ngx-grid-core/src/lib/ui/grid-overlays/single-select-grid-dropdown-overlay/single-select-grid-dropdown-overlay.component.html
+++ b/projects/ngx-grid-core/src/lib/ui/grid-overlays/single-select-grid-dropdown-overlay/single-select-grid-dropdown-overlay.component.html
@@ -2,7 +2,7 @@
   <div class="wrapper">
     <div class="search">
       <button mat-icon-button class="open-simple-selector" (click)="openSimpleSelector()" matTooltip="Back to simple selector">
-        <span class="material-icons-outlined">arrow_back</span>
+        <span class="material-symbols-outlined">arrow_back</span>
       </button>
       <input type="text" placeholder="Find an option" #searchInput autocomplete="off" [formControl]="searchCtrl">
       <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" style="fill: currentColor">
