--- a/projects/ngx-grid-toolbar/src/lib/ui/static-toolbar/items/common-toolbar-item-styles.scss
+++ b/projects/ngx-grid-toolbar/src/lib/ui/static-toolbar/items/common-toolbar-item-styles.scss
@@ -58,7 +58,7 @@ button:not(.mat-menu-item) {
     line-height: 14px;
   }
   .mat-icon + .label,
-  .material-icons-outlined + .label {
+  .material-symbols-outlined + .label {
     margin-left: 4px;
   }
   .mat-icon + .icon {
