--- a/projects/ngx-grid-toolbar/src/lib/ui/static-toolbar/items/revert-records/revert-records.component.html
+++ b/projects/ngx-grid-toolbar/src/lib/ui/static-toolbar/items/revert-records/revert-records.component.html
@@ -5,7 +5,7 @@
     <span class="label"><lib-localized-text>locRevertAllRecords</lib-localized-text></span>
   </button>
   <button class="main arrow icon-button" matRipple [matMenuTriggerFor]="dropdownMenu">
-    <span class="material-icons-outlined icon">keyboard_arrow_down</span>
+    <span class="material-symbols-outlined icon">keyboard_arrow_down</span>
   </button>
 </div>
 <mat-menu #dropdownMenu="matMenu">
