--- a/projects/ngx-grid-toolbar/src/lib/ui/static-toolbar/toolbar.component.html
+++ b/projects/ngx-grid-toolbar/src/lib/ui/static-toolbar/toolbar.component.html
@@ -3,7 +3,7 @@
   <div class="secondary" #secondary></div>
   <div class="dropdown">
     <button class="secondary" matRipple [matMenuTriggerFor]="dropdownMenu" #dropDownTrigger>
-      <span class="material-icons-outlined">more_horiz</span>
+      <span class="material-symbols-outlined">more_horiz</span>
     </button>
     <mat-menu #dropdownMenu="matMenu" [hasBackdrop]="false">
       <div class="dropdown-menu" #dropdown></div>
