--- a/projects/ngx-grid-core/src/lib/ui/record-selector/record-selector-row/record-selector-row.component.html
+++ b/projects/ngx-grid-core/src/lib/ui/record-selector/record-selector-row/record-selector-row.component.html
@@ -3,7 +3,7 @@
   <data-grid-record-selector-cell #cells [columnKey]="c" [rowComponent]="rowComponent" *ngFor="let c of columns; trackBy:cellColumnKey" class="cell"></data-grid-record-selector-cell>
 </div>
 <button class="action" mat-icon-button (click)="$event.stopPropagation(); selected.emit({ rowKey, originatedFrom: 'ActionButton' })" *ngIf="!disabled">
-  <span class="outer material-icons-outlined mat-app-background">
+  <span class="outer material-symbols-outlined mat-app-background">
     <span class="inner">
       <span class="icon">{{ iconStr }}</span>
     </span>
