--- a/projects/ngx-grid-core/src/lib/ui/grid-overlays/cell-validation-message/cell-validation-message.component.html
+++ b/projects/ngx-grid-core/src/lib/ui/grid-overlays/cell-validation-message/cell-validation-message.component.html
@@ -1,3 +1,3 @@
 <div class="validation-message" [ngClass]="severity(result)" *ngFor="let result of validationResults">
-  {{ result.message }}
+  {{ localized(result.message) }}
 </div>
