--- a/projects/ngx-grid-core/src/lib/ui/grid-overlays/multi-select-static-cell-preview/multi-select-static-cell-preview.component.html
+++ b/projects/ngx-grid-core/src/lib/ui/grid-overlays/multi-select-static-cell-preview/multi-select-static-cell-preview.component.html
@@ -1,6 +1,6 @@
 <data-grid-expandable-preview-popup (action)="$event === 'expandButton' ? expand() : select()" [overlayData]="data">
   <data-grid-chip chipStyle="rounded" [color]="option.color ?? defaultColor" [editable]="cell.isEditable"
-    [theme]="themeMode" *ngFor="let option of options" [label]="option.label ?? option.value.toString()"
+    [theme]="themeMode" *ngFor="let option of options" [label]="option.label ?? option.value?.toString()"
     (removeAction)="remove(option)">
   </data-grid-chip>
   <data-grid-cell-action-button actionType="more" (action)="expand()" *ngIf="totalOptionsCount > 2">
