--- a/projects/ngx-grid-core/src/lib/ui/grid-overlays/multi-select-static-list-overlay/multi-select-static-list-overlay.component.html
+++ b/projects/ngx-grid-core/src/lib/ui/grid-overlays/multi-select-static-list-overlay/multi-select-static-list-overlay.component.html
@@ -6,6 +6,6 @@
     </button>
   </div>
   <data-grid-chip [color]="option.color ?? defaultColor" [editable]="cell.isEditable" [theme]="themeMode"
-    *ngFor="let option of options" [label]="option.label ?? option.value.toString()" (removeAction)="remove(option)"
+    *ngFor="let option of options" [label]="option.label ?? option.value?.toString()" (removeAction)="remove(option)"
     chipStyle="rounded"></data-grid-chip>
 </app-floating-window>
