--- a/projects/ngx-grid-core/src/lib/ui/grid-overlays/single-select-simple-foreign-key-dropdown-overlay/single-select-simple-foreign-key-dropdown-overlay.component.html
+++ b/projects/ngx-grid-core/src/lib/ui/grid-overlays/single-select-simple-foreign-key-dropdown-overlay/single-select-simple-foreign-key-dropdown-overlay.component.html
@@ -1,5 +1,5 @@
-<div class="wrapper mat-elevation-z2" #wrapper [dataGridKeepVisible]="highlightedElement" [scrollPadding]="[40, 10]">
-  <div class="search mat-app-background" [ngClass]="{ 'mat-elevation-z2': scrollOffset > 0 }">
+<div class="wrapper mat-elevation-z2" #wrapper>
+  <div class="search mat-app-background" [ngClass]="{ 'mat-elevation-z2': ((scrollOffsetAsync | async) ?? 0) > 0 }">
     <input type="text" placeholder="Find an option" #searchInput autocomplete="off" [formControl]="searchCtrl">
     <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 0 24 24" width="24px" style="fill: currentColor">
       <path d="M0 0h24v24H0V0z" fill="none" />
@@ -10,15 +10,16 @@
       <span class="material-symbols-outlined">grid_on</span>
     </button>
   </div>
-  <lib-loading-dots [showText]="true" *ngIf="(loadingState | async) === LoadingState.Loading"></lib-loading-dots>
-  <div class="items" *ngIf="(loadingState | async) === LoadingState.Idle">
-    <button mat-menu-item (click)="updateValue(null); close()" *ngIf="!searchCtrl.value"
-      [ngClass]="{highlighted: highlightedItem === null}"><span class="bubble empty">&nbsp;</span></button>
-    <button mat-menu-item (click)="selectOption(op)" *ngFor="let op of filteredOptions" #options
-      [ngClass]="{highlighted: highlightedItem === op}">
-      <span class="bubble"
+  <lib-loading-dots [showText]="true" *ngIf="(dropdownState | async) === ForeignKeyDropdownState.Loading">
+  </lib-loading-dots>
+
+  <cdk-virtual-scroll-viewport #virtualScrollViewport [itemSize]="itemHeight" *ngIf="(dropdownState | async) === ForeignKeyDropdownState.Idle">
+    <button mat-menu-item (click)="selectOption(op)" *cdkVirtualFor="let op of filteredOptions"
+      [ngClass]="{highlighted: (selectedOption | async) === op}">
+      <span class="bubble empty" *ngIf="op.value === null">&nbsp;</span>
+      <span class="bubble" *ngIf="op.value !== null"
         [dataGridResponsiveBackgroundColor]="{color: op.color ?? defaultColor, themeMode: themeMode}">{{ op.label ??
         op.value }}</span>
     </button>
-  </div>
+  </cdk-virtual-scroll-viewport>
 </div>
