--- a/projects/ngx-grid-toolbar/src/lib/ui/static-toolbar/items/revert-records/revert-records.component.html
+++ b/projects/ngx-grid-toolbar/src/lib/ui/static-toolbar/items/revert-records/revert-records.component.html
@@ -1,5 +1,5 @@
 
-<div class="button-group">
+<div class="button-group" [ngClass]="{disabled: !isEnabled}">
   <button class="main text" matRipple (click)="revertAll(); toolbarService.setItems()">
     <mat-icon svgIcon="Undo"></mat-icon>
     <span class="label"><lib-localized-text>locRevertAllRecords</lib-localized-text></span>
