--- a/projects/ngx-grid-toolbar/src/lib/ui/static-toolbar/items/commit-changes/commit-records.component.scss
+++ b/projects/ngx-grid-toolbar/src/lib/ui/static-toolbar/items/commit-changes/commit-records.component.scss
@@ -1,11 +1,20 @@
+.disabled {
+  pointer-events: none;
+  opacity: 0.7;
+  filter: grayscale(0.75);
+}
+
 button {
   &.main {
-    color: var(--green-themed)!important;
+    color: var(--green-themed) !important;
     border: 1px solid var(--green-themed);
   }
+
   &.arrow {
     border-left: none;
     position: relative;
+    margin-left: 0;
+
     &:before {
       content: ' ';
       position: absolute;
@@ -16,10 +25,10 @@ button {
       background-color: var(--green-themed);
       opacity: 0.5;
     }
-    margin-left: 0;
-  }  
+  }
+
   &.text {
     border-right: none;
-    margin-right: 0!important;
+    margin-right: 0 !important;
   }
 }
