--- a/projects/ngx-grid-toolbar/src/lib/ui/static-toolbar/items/revert-records/revert-records.component.scss
+++ b/projects/ngx-grid-toolbar/src/lib/ui/static-toolbar/items/revert-records/revert-records.component.scss
@@ -1,10 +1,19 @@
+.disabled {
+  pointer-events: none;
+  opacity: 0.7;
+  filter: grayscale(0.75);
+}
+
 button {
   &.main {
     border: 1px solid var(--divider-color-30);
   }
+
   &.arrow {
     border-left: none;
     position: relative;
+    margin-left: 0;
+
     &:before {
       content: ' ';
       position: absolute;
@@ -15,10 +24,10 @@ button {
       background-color: var(--divider-color-30);
       opacity: 0.5;
     }
-    margin-left: 0;
-  }  
+  }
+
   &.text {
     border-right: none;
-    margin-right: 0!important;
+    margin-right: 0 !important;
   }
 }
