--- a/projects/ngx-grid-core/src/lib/ui/body/body.component.html
+++ b/projects/ngx-grid-core/src/lib/ui/body/body.component.html
@@ -1,6 +1,14 @@
 <div style="position: relative; height: 100%;" [dataGridContextMenu]="getContextMenuItems">
   <cdk-virtual-scroll-viewport class="virtual-scroll" itemSize="25" #viewport>
-    <data-grid-row class="row" *cdkVirtualFor="let r of rows; trackBy: rowTrackBy; let index = index" [index]="index" [gridRow]="r"></data-grid-row>
+    <data-grid-row class="row" *cdkVirtualFor="let r of rows; trackBy: rowTrackBy; let index = index" [index]="index"
+      [gridRow]="r"></data-grid-row>
+    <div class="row status"></div>
   </cdk-virtual-scroll-viewport>
   <div style="position: absolute; top:0; left:0; width:100%; height:100%; pointer-events:none"></div>
+  <div class="status-row mat-app-background" libAbsolutePositionMinusScrollbars [changes]="dataChanges"
+    [viewport]="viewport">
+    <div class="txt grid-name"><lib-localized-text>{{ name }}</lib-localized-text></div>
+    <div class="greedy"></div>
+    <div class="txt records-count" *ngIf="rows.length > 0">{{ rows.length | number }} <lib-localized-text>locRecords</lib-localized-text></div>
+  </div>
 </div>
