--- a/projects/ngx-grid-core/src/lib/ui/header/header.component.html
+++ b/projects/ngx-grid-core/src/lib/ui/header/header.component.html
@@ -12,9 +12,8 @@
     *ngFor="let columnKey of (columns | async); let index = index"
     class="cell display">
     <app-resizer (output)="resizeColumn($event.x, columnKey)" (resizeStart)="startResize()"
-      (ResizeEnd)="endResize()" (mouseenter)="disableDrag()" (mouseleave)="enableDrag()"></app-resizer>
-    <span class="material-symbols-outlined sort-icon" *ngIf="columnKey === sortingBy">{{ sortingByDirection ? 'north'
-      : 'south' }}</span>
+      (resizeEnd)="endResize()" (mouseenter)="disableDrag()" (mouseleave)="enableDrag()"></app-resizer>
+    <span class="material-symbols-outlined sort-icon" *ngIf="columnHasSort(columnKey)">{{ columnSortIconKey(columnKey) }}</span>
     <data-grid-separator *ngFor="let s of separators(columnKey)" Axis="y" [separator]="s"></data-grid-separator>
     <div class="text-readonly"><lib-localized-text>{{ label(columnKey) }}</lib-localized-text></div>
     </div>
