--- a/projects/ngx-grid-core/src/lib/ui/header/header.component.html
+++ b/projects/ngx-grid-core/src/lib/ui/header/header.component.html
@@ -7,14 +7,14 @@
     cdkDrag
     cdkDragLockAxis="x"
     [cdkDragDisabled]="dragDisabled"
-    [ngClass]="{ 'col-selected': columnsSelected[columnKey] }"
+    [ngClass]="{ 'col-selected': columnsSelected[column.columnKey] }"
     Type="Text"
-    *ngFor="let columnKey of (columns | async); let index = index"
+    *ngFor="let column of (columns | async); let index = index"
     class="cell display">
-    <app-resizer (output)="resizeColumn($event.x, columnKey)" (resizeStart)="startResize()"
+    <app-resizer (output)="resizeColumn($event.x, column)" (resizeStart)="startResize()"
       (resizeEnd)="endResize()" (mouseenter)="disableDrag()" (mouseleave)="enableDrag()"></app-resizer>
-    <span class="material-symbols-outlined sort-icon" *ngIf="columnHasSort(columnKey)">{{ columnSortIconKey(columnKey) }}</span>
-    <data-grid-separator *ngFor="let s of separators(columnKey)" Axis="y" [separator]="s"></data-grid-separator>
-    <div class="text-readonly"><lib-localized-text>{{ label(columnKey) }}</lib-localized-text></div>
+    <span class="material-symbols-outlined sort-icon" *ngIf="columnHasSort(column)">{{ columnSortIconKey(column) }}</span>
+    <data-grid-separator *ngFor="let s of separators(column.columnKey)" Axis="y" [separator]="s"></data-grid-separator>
+    <div class="text-readonly"><lib-localized-text>{{ column.name ?? column.columnKey }}</lib-localized-text></div>
     </div>
 </div>
