--- a/projects/ngx-grid-core/src/lib/ui/record-selector/record-selector-row/record-selector-row.component.html
+++ b/projects/ngx-grid-core/src/lib/ui/record-selector/record-selector-row/record-selector-row.component.html
@@ -1,6 +1,6 @@
 <div class="title">{{ previewDescription }}</div>
 <div class="cells">
-  <data-grid-record-selector-cell #cells [columnKey]="c" [rowComponent]="rowComponent" *ngFor="let c of columns; trackBy:cellColumnKey" class="cell"></data-grid-record-selector-cell>
+  <data-grid-record-selector-cell #cells [column]="c" [rowComponent]="rowComponent" *ngFor="let c of columns; trackBy:cellColumnKey" class="cell"></data-grid-record-selector-cell>
 </div>
 <button class="action" mat-icon-button (click)="$event.stopPropagation(); selected.emit({ rowKey, originatedFrom: 'ActionButton' })" *ngIf="!disabled">
   <span class="outer material-symbols-outlined mat-app-background">
