--- a/projects/ngx-grid-core/src/lib/ui/header/header.component.html
+++ b/projects/ngx-grid-core/src/lib/ui/header/header.component.html
@@ -8,8 +8,9 @@
     cdkDragLockAxis="x"
     [cdkDragDisabled]="dragDisabled"
     [ngClass]="{ 'col-selected': columnsSelected[column.columnKey] }"
-    Type="Text"
+    type="Text"
     *ngFor="let column of (columns | async); let index = index"
+    [style.width] = "((columnWidths | async)?.[column.columnKey] ?? '') + 'px'"
     class="cell display">
     <app-resizer (output)="resizeColumn($event.x, column)" (resizeStart)="startResize()"
       (resizeEnd)="endResize()" (mouseenter)="disableDrag()" (mouseleave)="enableDrag()"></app-resizer>
