Floating row title for group header

--- a/projects/ngx-grid-core/src/lib/data-grid-common-styles.scss
+++ b/projects/ngx-grid-core/src/lib/data-grid-common-styles.scss
@@ -177,7 +177,7 @@
     }
   }
 
-  &.is-invalid.validation-id-IsRequired {
+  &.is-invalid.validation-id-IsRequired.is-editable {
     ::ng-deep {
       .is-required-asterix {
         display: block;
