--- a/projects/ngx-grid-core/src/lib/ui/row/row.component.html
+++ b/projects/ngx-grid-core/src/lib/ui/row/row.component.html
@@ -3,3 +3,4 @@
   <data-grid-separator *ngFor="let s of separators" [separator]="s" axis="x" ></data-grid-separator>
 </div>
 <data-grid-cell class="cell" #cells class="cell" *ngFor="let c of columns; trackBy:cellColumnKey" [column]="c" [rowComponent]="rowComponent"></data-grid-cell>
+<lib-row-floating-title *ngIf="gridRow.floatingTitle" [row]="gridRow"></lib-row-floating-title>
